# mythology-legacy

./: .gitignore  .gitmodules  CMakeLists.txt  Mythology.sln
Applications/: CMakeLists.txt
Common/: Common.vcxproj  Common.vcxproj.filters  EngineException.cpp  EngineException.h  Helpers.cpp  Helpers.h  PerformanceTimer.cpp  PerformanceTimer.h  TasksComponent.cpp  Timer.cpp  Timer.h
DirectX12XamlApp/: Converters.h  DirectX12XamlApp.vcxproj  DirectX12XamlApp.vcxproj.filters  DirectX12XamlAppMain.cpp  DirectX12XamlAppMain.h  DirectXPage.xaml.cpp  DirectXPage.xaml.h  pch.h
GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters  GameObject.cpp  GameObject.h  GraphicsComponent.cpp  GraphicsComponent.h  IComponent.h  TransformComponent.cpp
GraphicsEngine/: D3DBase.cpp  D3DBase.h  DeviceResources.cpp  DeviceResources.h  DirectXHelper.h  DisplayOrientations.h  GraphicsEngine.vcxproj  GraphicsEngine.vcxproj.filters  IGraphics.h  IMaterial.h  IScene.h  ISwapChainPanel.h  IWindow.h  Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  ShaderStructures.h  d3dx12.h  pch.h
Mythology/: Mythology.vcxitems  Mythology.vcxitems.filters  Mythology.vcxproj  MythologyAPI.h
MythologyTestProject/: MythologyTestProject.vcxproj  pch.cpp  (+4 more)
Utilities/: CMakeLists.txt
Utilities/Common/: Common.vcxitems
Utilities/Common/Common/: EngineException.h
Utilities/Common/Common/Timers/: Timer.cpp
Utilities/CommonTests/: CommonTests.vcxproj
Utilities/CommonTests/Common/Events/: EventTests.cpp
Utilities/Include/Utilities/: EngineException.h
Utilities/Source/: EngineException.cpp
(+736 files in other folders)
